Add Bootstrap and Javascript links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,7 @@
 /* Google font import */
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap');
+
+/* CSS Variables */ 
+:root {
+    --primary-font: "Red Hat Display"
+}
