--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,8 +51,12 @@ nav {
     text-wrap: wrap;
 }
 
+/* Buttons */
 .custom-button-outline,
-.btn-outline-secondary {
+.btn-outline-secondary,
+#instructions-button,
+#contact-button,
+#home-button {
     border-color: #76896E;
     border-width: 2px;
     background-color: #BCB7A4;
@@ -60,7 +64,10 @@ nav {
 }
 
 .custom-button-outline:hover,
-.btn-outline-secondary:hover {
+.btn-outline-secondary:hover,
+#instructions-button:hover,
+#contact-button:hover,
+#home-button:hover {
     background-color: #76896E;
     border-color: #BCB7A4;
     border-width: 2px;
@@ -97,7 +104,8 @@ nav {
 }
 
 #username,
-#select-difficulty {
+#select-difficulty,
+#success-paragraph {
     font-size: large;
 }
 
@@ -108,6 +116,15 @@ h2 {
 
 #select-difficulty {
     margin-top: 5px;
+}
+
+/* Submission Page */
+.submission-container {
+    border: 2px solid #76896E!important;
+    background-color: #BEC7BC;
+    border-radius: 30px;
+    margin: 20vh 20vw ;
+    height: 200px;
 }
 
 /* Footer */
@@ -147,6 +164,11 @@ h2 {
     margin-left: 5px;
    }
 
+   #success-logo {
+    margin-left: -12px;
+    margin-right: 0px;
+   }
+
     .navbar-nav {
         flex-direction: row;
    }
@@ -174,7 +196,8 @@ h2 {
        padding-top: 1rem!important;
    }
 
-   .quiz-container {
+   .quiz-container,
+   .submission-container  {
        margin: 22vh 5vw;
        height: auto;
    }
@@ -187,7 +210,8 @@ h2 {
     margin: 0 0 10px 0;
    }
 
-   .btn-outline-secondary {
+   .btn-outline-secondary,
+   #home-button {
     margin: 0 5px 15px 5px;
    }
 }
@@ -204,6 +228,10 @@ h2 {
   @media screen and (min-width: 992px) {
     h2 {
         font-size: x-large;
+    }
+
+    #success-paragraph {
+        margin: 0 5px 15px 5px;
     }
   }
   
