--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,8 @@ nav {
 #answer1,
 #answer2,
 #answer3,
-#answer4 {
+#answer4,
+#new-game-button {
     border-color: #76896E;
     border-width: 2px;
     background-color: #BCB7A4;
@@ -77,7 +78,8 @@ nav {
 #answer1:hover,
 #answer2:hover,
 #answer3:hover,
-#answer4:hover {
+#answer4:hover,
+#new-game-button:hover {
     background-color: #76896E;
     border-color: #BCB7A4;
     border-width: 2px;
@@ -127,6 +129,10 @@ nav {
     margin: 3px 3px 3px 3px;
 }
 
+#new-game-button {
+    margin-top: 10px;
+}
+
 /* Quiz setup */
 .quiz-container {
     border: 2px solid #76896E!important;
@@ -161,7 +167,8 @@ h2 {
 }
 
 /* Question section */
-#question-section {
+#question-section,
+#end-game {
     border: 2px solid #76896E!important;
     background-color: #BEC7BC;
     border-radius: 30px;
@@ -182,6 +189,12 @@ h2 {
 .fa-solid.fa-xmark {
     color: #FF0000;
     font-size: large;
+}
+
+/* Results section */
+#final-result {
+    font-size: large;
+    margin-top: 25px;
 }
 
 /* Submission page */
