Add API link and hide/show sections to script.js. Update learning references in README.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,10 @@ body {
     background-size: cover;
 }
 
+.hide {
+    display: none;
+}
+
 /* Navbar */
 nav {
     border-bottom: 2px solid #76896E!important;
@@ -171,7 +175,7 @@ h2 {
 
 /* Question section */
 #question-section,
-#end-game {
+#results-section {
     border: 2px solid #76896E!important;
     background-color: #BEC7BC;
     border-radius: 30px;
